2004-05-05  Karl Runge <runge@karlrunge.com>
	* mouse button -> keystrokes and keystroke -> mouse button mappings
	  in -buttonmap and -remap
	* shm OS blacklist revert to -onetile

2004-04-28  Karl Runge <runge@karlrunge.com>
	* x11vnc: -auth, more -cursopor and -nofb work

2004-04-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: -cursorpos, -sigpipe

2004-04-13  Karl Runge <runge@karlrunge.com>
	* x11vnc: do not send selection unless all clients
	  are in RFB_NORMAL state.
	* increase rfbMaxClientWait when threaded to avoid
	  ReadExact() timeouts for some viewers.

2004-04-08  Karl Runge <runge@karlrunge.com>
	* x11vnc options -blackout, -xinerama, -xwarppointer
	* modify configure.ac to pick up -lXinerama
	* extend -remap to take mapping list.
	* check cargs result for unused args.

2004-03-22  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fix cargs.c (hopefully for the last time):
	  arguments were not correctly purged

2004-03-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fix libvncserver-config to again return a linker when
	  called with --link

2004-03-10  Karl Runge <runge@karlrunge.com>
	* x11vnc options -vncconnect, -connect, -remap,
	  -debug_pointer, and -debug_keyboard
	* support reverse connections, vncconnect(1), etc.
	* expt. with user supplied keysym remapping.
	* debug output option for pointer and keyboard.

2004-02-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fixed warning of valgrind for regiontest

2004-02-19  Karl Runge <runge@karlrunge.com>
	* x11vnc options -nosel -noprimary -visual.
	* add clipboard/selection handling.
	* add visual option (mostly for testing and workarounds).
	* improve shm cleanup on failures.

2004-02-04  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Make examples (at least a few) compileable with g++,
	  as pointed out by Juan Jose Costello

2004-01-30  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Thanks to Paul Fox from Bright Star Engineering,